[package]
name       = "dico-primitives"
version    = "1.0.0"
authors    = ["DICO-TEAM"]
edition     = '2021'
license    = "Apache-2.0"
homepage   = "https://github.com/DICO-TEAM/dico-chain"
repository = "https://github.com/DICO-TEAM/dico-chain"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec                 = { package = 'parity-scale-codec', version = '2.3.1'}
frame-system          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
sp-core               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
sp-runtime            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
pallet-aura           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
pallet-grandpa        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
sp-version            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
sp-consensus-aura     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13'}
sp-io                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13'}
sp-std                = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
scale-info            = { version = '1.0', features = ['derive'] }
serde                 = { version = '1', optional = true }
serde_json            = { version = "1.0", optional = true}





[features]
default = ['std']
std = [
    "serde_json/std",
    "serde/std",
]

[lib]
doctest = false