[package]
name       = "dico-primitives"
version    = "1.0.0"
authors    = ["DICO-TEAM"]
edition     = '2021'
license    = "Apache-2.0"
homepage   = "https://github.com/DICO-TEAM/dico-chain"
repository = "https://github.com/DICO-TEAM/dico-chain"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec                   = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
scale-info              = { version = '2.1.1', features = ['derive'], default-features = false }
serde                   = { version = '1', optional = true }
serde_json              = { version = "1.0.68" }

frame-system            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
sp-application-crypto   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-core                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-runtime              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-aura             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-grandpa          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-version              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-consensus-aura       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-io                   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-std                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }





[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "scale-info/std",

    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-api/std",

    "frame-system/std",
    "sp-application-crypto/std",
    "cumulus-primitives-core/std",
    "pallet-aura/std",
    "pallet-grandpa/std",
    "sp-version/std",
    "sp-consensus-aura/std",

]

[lib]
doctest = false
