[package]
name        = 'dico'
authors     = ["DICO-TEAM"]
description = 'A decentralized and governable ICO platform.'
license     = 'Apache 2.0'
version     = '1.3.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'
build       = 'build.rs'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }

[[bin]]
name = 'dico'



[dependencies]
derive_more  = { version = '0.99.2' }
log          = { version = '0.4.14' }
codec        = { package = 'parity-scale-codec', version = '2.3.1' }
clap         = { version = "3.1", features = ["derive"] }
serde        = { version = "1.0.124", features = ["derive"] }
serde_json   = { version = '1.0.68' }
hex-literal  = { version = '0.3.4' }
jsonrpc-core = { version = '18.0.0' }




# runtime
kico-runtime               = { package = "kico-runtime", path = '../../runtime/kico' }
tico-runtime               = { package = "tico-runtime", path = '../../runtime/tico' }


# Local Dependencies
dico-primitives            = { package = 'dico-primitives', path = "../../primitives" }
pallet-farm-rpc            = { package = 'pallet-farm-rpc', path = "../../pallets/farm/rpc" }
pallet-ico-rpc-runtime-api = { path = "../../pallets/ico/rpc/runtime-api"}
pallet-ico-rpc             = { path = "../../pallets/ico/rpc/rpc" }
pallet-currencies          = { path = "../../pallets/currencies"}



# Substrate Dependencies
frame-benchmarking             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
frame-benchmarking-cli         = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
substrate-frame-rpc-system     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }


## Substrate Client Dependencies
sc-basic-authorship     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-chain-spec           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-cli                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', features = ['wasmtime']}
sc-client-api           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-consensus            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-executor             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' , features = ['wasmtime']}
sc-network              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-keystore             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-rpc                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-rpc-api              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-service              = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.17" , features = ['wasmtime']}
sc-telemetry            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sc-transaction-pool     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-tracing              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }


frame-system-rpc-runtime-api               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-transaction-payment-rpc             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }
try-runtime-cli                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', optional = true }


## Substrate Primitive Dependencies
sp-std                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17', default-features = false }
sp-api                  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-block-builder        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-blockchain           = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-consensus            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-consensus-aura       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-core                 = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-inherents            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-keystore             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-offchain             = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-runtime              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-session              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-storage              = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-timestamp            = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-authority-discovery  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }
sp-transaction-pool     = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.17' }




# Cumulus dependencies
cumulus-client-consensus-aura         = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-client-consensus-common       = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-client-collator               = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-client-cli                    = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-client-network                = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-client-service                = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-primitives-core               = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-relay-chain-interface         = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }
cumulus-relay-chain-local             = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17' }

# Polkadot dependencies
polkadot-cli          = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.17' }
polkadot-parachain    = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.17' }
polkadot-primitives   = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.17' }
polkadot-service      = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.17' }
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.17' }


[features]
default            = ['std']
runtime-benchmarks = [
    'kico-runtime/runtime-benchmarks',
    'tico-runtime/runtime-benchmarks',
    'polkadot-service/runtime-benchmarks',
]
std                = []
try-runtime        = [
    'try-runtime-cli',
]